src/features/definition/snapshots/texlab__features__definition__tests__command_definition.snap
---
source: src/features/definition/tests.rs
assertion_line: 63
expression: links
---
[
  {
    "originSelectionRange": {
      "start": {
        "line": 1,
        "character": 0
      },
      "end": {
        "line": 1,
        "character": 4
      }
    },
    "targetUri": "[tmp]/main.tex",
    "targetRange": {
      "start": {
        "line": 0,
        "character": 0
      },
      "end": {
        "line": 0,
        "character": 31
      }
    },
    "targetSelectionRange": {
      "start": {
        "line": 0,
        "character": 21
      },
      "end": {
        "line": 0,
        "character": 25
      }
    }
  }
]
