src/features/definition/snapshots/texlab__features__definition__tests__document_simple.snap
---
source: src/features/definition/tests.rs
assertion_line: 62
expression: links
---
[
  {
    "originSelectionRange": {
      "start": {
        "line": 0,
        "character": 16
      },
      "end": {
        "line": 0,
        "character": 23
      }
    },
    "targetUri": "[tmp]/baz.bib",
    "targetRange": {
      "start": {
        "line": 0,
        "character": 0
      },
      "end": {
        "line": 0,
        "character": 0
      }
    },
    "targetSelectionRange": {
      "start": {
        "line": 0,
        "character": 0
      },
      "end": {
        "line": 0,
        "character": 0
      }
    }
  }
]
