src/features/definition/snapshots/texlab__features__definition__tests__entry_simple.snap
---
source: src/features/definition/tests.rs
assertion_line: 67
expression: links
---
[
  {
    "originSelectionRange": {
      "start": {
        "line": 1,
        "character": 6
      },
      "end": {
        "line": 1,
        "character": 9
      }
    },
    "targetUri": "[tmp]/baz.bib",
    "targetRange": {
      "start": {
        "line": 0,
        "character": 0
      },
      "end": {
        "line": 0,
        "character": 26
      }
    },
    "targetSelectionRange": {
      "start": {
        "line": 0,
        "character": 9
      },
      "end": {
        "line": 0,
        "character": 12
      }
    }
  }
]
