src/features/definition/snapshots/texlab__features__definition__tests__string_concat.snap
---
source: src/features/definition/tests.rs
assertion_line: 87
expression: links
---
[
  {
    "originSelectionRange": {
      "start": {
        "line": 1,
        "character": 23
      },
      "end": {
        "line": 1,
        "character": 26
      }
    },
    "targetUri": "[tmp]/main.bib",
    "targetRange": {
      "start": {
        "line": 0,
        "character": 0
      },
      "end": {
        "line": 0,
        "character": 20
      }
    },
    "targetSelectionRange": {
      "start": {
        "line": 0,
        "character": 8
      },
      "end": {
        "line": 0,
        "character": 11
      }
    }
  }
]
